--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -2,6 +2,27 @@
     background-color: #ffffff;
 }
 
+.NavLogo {
+    margin-right: 1vh;
+}
+
+.NavLogo:hover {
+    background-color: #ffffff;
+}
+
 img:hover {
     background-color: #c5ecef;
+}
+
+.NavLink {
+    padding: 10px;
+    color: black;
+}
+
+.Active {
+    background-color: #d9f1fb;
+}
+  
+a:hover {
+    color: #11780a;
 }
