--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -1,5 +1,6 @@
 .NavBar {
     background-color: #ffffff;
+    font-size: 2.2vh;
 }
 
 .NavLogo {
@@ -8,10 +9,15 @@
 
 .NavLogo span {
     margin: 5px 5px 0 10px;
+    font-size: 3.1vh;
 }
 
 .NavLogo:hover {
     background-color: #ffffff;
+}
+
+img {
+    margin-bottom: 3px;
 }
 
 img:hover {
@@ -19,7 +25,7 @@ img:hover {
 }
 
 .NavLink {
-    padding: 10px;
+    padding: 8px;
     color: black;
 }
 
